--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!-- navbar -->
     <nav>
         <div class="logo">
-            Just My Portfolio
+            Just scroll down ↓
         </div>
         <div class="navbar">
             <ul class="sub-nav">
