Mod html & css, Add IMG Abstract

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <!-- navbar -->
     <nav>
-        <div class="logo">
+        <div class="mark-scroll">
             Just scroll down ↓
         </div>
         <div class="navbar">
@@ -42,16 +42,16 @@
                 Hello🎈 <br> Iam Faisal, <br> and I, a student at college...
             </div>
         </h1>
-        <img class="shape1" src="/img-abstract/BG-Elipse-3.svg" alt="">
+        <img class="shape1" src="/img-abstract/BG-Elipse-New.svg" alt="">
 
         <div class="button">
-            <div class="card"><a href="#github" style="--clr:#ff33cc" tabindex="0">Github </a></div>
+            <div class="card"><a href="https://github.com/MFaisal00359" style="--clr:#ff33cc" tabindex="0">Github </a></div>
             <div class="card"><a href="#work " style="--clr:#5cff33 " tabindex="0 ">Bookmark </a></div>
             <div class="card"><a href="#work" style="--clr:#5cff33" tabindex="0">My Blog</a></div>
             <div class="card "><a href="#work " style="--clr:#ff33cc " tabindex="0 ">Project</a></div>
         </div>
 
-        <div class="content">
+        <div class="content">_
             <details class="tentang">
                 <summary>Tentang saya</summary>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quasi pariatur praesentium ut est commodi eos nemo maxime voluptate eligendi maiores officia sit, mollitia quibusdam?</p>
@@ -76,7 +76,7 @@
     <div class="menu-overlay">
         <img src="/assets/undraw_under_construction_46pa.svg" width="350" alt="">
         <h1 class="overlay-info">
-            This web still in develop :)
+            Yeahh lom :)
         </h1>
     </div>
 
