Fix Responsive css, Fix Layout css

--- a/index.html
+++ b/index.html
@@ -45,21 +45,16 @@
         <img class="shape1" src="/img-abstract/BG-Elipse-New.svg" alt="">
 
         <div class="button">
-            <div class="card"><a href="https://github.com/MFaisal00359" style="--clr:#ff33cc" tabindex="0">Github </a></div>
+            <div class="card"><a href="https://github.com/MFaisal00359" style="--clr:#ff33cc" tabindex="0" target="_blank">Github </a></div>
             <div class="card"><a href="#work " style="--clr:#5cff33 " tabindex="0 ">Bookmark </a></div>
-            <div class="card"><a href="#work" style="--clr:#5cff33" tabindex="0">My Blog</a></div>
+            <div class="card"><a href="#work" style="--clr:#ff7a33" tabindex="0">My Blog</a></div>
             <div class="card "><a href="#work " style="--clr:#ff33cc " tabindex="0 ">Project</a></div>
         </div>
-
-        <div class="content">_
-            <details class="tentang">
-                <summary>Tentang saya</summary>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quasi pariatur praesentium ut est commodi eos nemo maxime voluptate eligendi maiores officia sit, mollitia quibusdam?</p>
-            </details>
-        </div>
+        <details class="tentang">
+            <summary>Tentang saya</summary>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quasi pariatur praesentium ut est commodi eos nemo maxime voluptate eligendi maiores officia sit, mollitia quibusdam?</p>
+        </details>
     </main>
-
-
 
     <!-- RESPONSIVE TAG -->
     <div class="menu">
