--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="ornamen"></div>
         <h1 class="ml10">
             <div class="landing-text">
-                Hello🎈 <br> Iam Faisal, <br> and I, a student at college...
+                Hello🎈 <br> Iam Faisal, <br> Currently as a student in college...
             </div>
         </h1>
         <img class="shape1" src="/img-abstract/BG-Elipse-New.svg" alt="">
