--- a/index.html
+++ b/index.html
@@ -14,66 +14,26 @@
 
 <body>
 
-    <!-- navbar -->
-    <nav>
-        <div class="mark-scroll">
-            Just scroll down ↓
+    <!-- DESKTOP -->
+    <div class="landing">
+        <div class="My-foto">
+            <img src="./img/other/My-foto.png" alt="">
         </div>
-        <div class="navbar">
-            <ul class="sub-nav">
-                <li class="sub-line">
-                    <a href="#skills" tabindex="0">Skills</a>
-                </li>
-                <li class="sub-line">
-                    <a href="#works" tabindex="0">Works</a>
-                </li>
-                <li class="sub-not-line">
-                    <a href="#contact" tabindex="0"> Email Me</i>
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
-    <main>
-        <div class="ornamen"></div>
-        <h1 class="ml10">
-            <div class="landing-text">
-                Hello🎈 <br> Iam Faisal, <br> Currently as a student in college...
-            </div>
-        </h1>
-        <img class="shape1" src="/img-abstract/BG-Elipse-New.svg" alt="">
-
-        <div class="button">
-            <div class="card"><a href="https://github.com/MFaisal00359" style="--clr:#ff33cc" tabindex="0" target="_blank">Github </a></div>
-            <div class="card"><a href="#work " style="--clr:#5cff33 " tabindex="0 ">Bookmark </a></div>
-            <div class="card"><a href="#work" style="--clr:#ff7a33" tabindex="0">My Blog</a></div>
-            <div class="card "><a href="#work " style="--clr:#ff33cc " tabindex="0 ">Project</a></div>
+        <div class="text-1">
+            <p>Hello 👋, <br>My Name is Faisal, I’am currently as a student at College.<br> I very interested in web design, front-end and also app <br> development. but i still have a lot to learn <br>...</p>
         </div>
-        <details class="tentang">
-            <summary>Tentang saya</summary>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus quasi pariatur praesentium ut est commodi eos nemo maxime voluptate eligendi maiores officia sit, mollitia quibusdam?</p>
-        </details>
-    </main>
+
+        <div class="social">
+            <span clas="Github"><a style="--clr:#6624ff" href=""><img src="./img/other/Github-(32px).svg" alt=""></a></span>
+            <span clas="Dribbble"><a style="--clr:#ff24af"href=""><img src="./img/other/Dribbble-(32px).svg" alt=""></a></span>
+            <span clas="Facebook"><a style="--clr:#1f8bff"href=""><img src="./img/other/Facebook-(32px).svg" alt=""></a></span>
+            <span clas="Instagram"><a style="--clr:#de24ff"href=""><img src="./img/other/Instagram-(32px).svg" alt=""></a></span>
+        </div>
+    </div>
+
 
     <!-- RESPONSIVE TAG -->
-    <div class="menu">
-        <span class="menu-circle"></span>
-        <a href="#" class="menu-link">
-            <span class="menu-icon">
-            <span class="menu-line menu-line-1"></span>
-            <span class="menu-line menu-line-2"></span>
-            <span class="menu-line menu-line-3"></span>
-            </span>
-        </a>
-    </div>
-
-    <div class="menu-overlay">
-        <img src="/assets/undraw_under_construction_46pa.svg" width="350" alt="">
-        <h1 class="overlay-info">
-            Yeahh lom :)
-        </h1>
-    </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
