--- a/index.html
+++ b/index.html
@@ -15,20 +15,20 @@
 <body>
 
     <!-- DESKTOP -->
-    <div class="landing">
-        <div class="My-foto">
+    <div class="container">
+        <div class="My-foto mb">
             <img src="./img/other/My-foto.png" alt="">
         </div>
 
-        <div class="text-1">
-            <p>Hello 👋, <br>My Name is Faisal, I’am currently as a student at College.<br> I very interested in web design, front-end and also app <br> development. but i still have a lot to learn <br>...</p>
+        <div class="text-1 mb">
+            <p>Hello 👋, <br>My Name is Faisal, I’am currently as a student at College,<br> and I very interested in web design, front-end and also app <br> development. but i still have a lot to learn <br>...</p>
         </div>
 
-        <div class="social">
-            <span clas="Github"><a style="--clr:#6624ff" href=""><img src="./img/other/Github-(32px).svg" alt=""></a></span>
-            <span clas="Dribbble"><a style="--clr:#ff24af"href=""><img src="./img/other/Dribbble-(32px).svg" alt=""></a></span>
-            <span clas="Facebook"><a style="--clr:#1f8bff"href=""><img src="./img/other/Facebook-(32px).svg" alt=""></a></span>
-            <span clas="Instagram"><a style="--clr:#de24ff"href=""><img src="./img/other/Instagram-(32px).svg" alt=""></a></span>
+        <div class="social mb">
+            <span clas="Github"><a style="--clr:#6624ff" href="#"><img src="./img/other/Github-(32px).svg" alt=""></a></span>
+            <span clas="Dribbble"><a style="--clr:#ff24af"href="#"><img src="./img/other/Dribbble-(32px).svg" alt=""></a></span>
+            <span clas="Facebook"><a style="--clr:#1f8bff"href="#"><img src="./img/other/Facebook-(32px).svg" alt=""></a></span>
+            <span clas="Instagram"><a style="--clr:#de24ff"href="#"><img src="./img/other/Instagram-(32px).svg" alt=""></a></span>
         </div>
     </div>
 
